Bug 939491 - Avoid producing infinite stream of subnormals in BiquadFilterNode tail. r=padenot, a=bajaj

Using double precision for the processing means the main loop is unlikely to
encounter subnormals and provides suitable extra precision to minimize
accumulation of error.

If the tail output values are denormalized when converted to single precision
then flush them to zero to reduce downstream computation cost.