content/media/webaudio/blink/Biquad.cpp
@@ -26,9 +26,15 @@
  * THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
  */
 
-#include "DenormalDisabler.h"
+// For M_PI from cmath
+#ifdef _MSC_VER
+#  define _USE_MATH_DEFINES
+#endif
+
 #include "Biquad.h"
 
+#include <cmath>
+#include <float.h>
 #include <algorithm>
 
 namespace WebCore {
@@ -47,8 +53,6 @@ Biquad::~Biquad()
 
 void Biquad::process(const float* sourceP, float* destP, size_t framesToProcess)
 {
-    int n = framesToProcess;
-
     // Create local copies of member variables
     double x1 = m_x1;
     double x2 = m_x2;
@@ -61,12 +65,12 @@ void Biquad::process(const float* sourceP, float* destP, size_t framesToProcess)
     double a1 = m_a1;
     double a2 = m_a2;
 
-    while (n--) {
+    for (size_t i = 0; i < framesToProcess; ++i) {
         // FIXME: this can be optimized by pipelining the multiply adds...
-        float x = *sourceP++;
-        float y = b0*x + b1*x1 + b2*x2 - a1*y1 - a2*y2;
+        double x = sourceP[i];
+        double y = b0*x + b1*x1 + b2*x2 - a1*y1 - a2*y2;
 
-        *destP++ = y;
+        destP[i] = y;
 
         // Update state variables
         x2 = x1;
@@ -75,12 +79,22 @@ void Biquad::process(const float* sourceP, float* destP, size_t framesToProcess)
         y1 = y;
     }
 
-    // Local variables back to member. Flush denormals here so we
-    // don't slow down the inner loop above.
-    m_x1 = DenormalDisabler::flushDenormalFloatToZero(x1);
-    m_x2 = DenormalDisabler::flushDenormalFloatToZero(x2);
-    m_y1 = DenormalDisabler::flushDenormalFloatToZero(y1);
-    m_y2 = DenormalDisabler::flushDenormalFloatToZero(y2);
+    // Avoid introducing a stream of subnormals when input is silent and the
+    // tail approaches zero.
+    if (x1 == 0.0 && x2 == 0.0 && (y1 != 0.0 || y2 != 0.0) &&
+        fabs(y1) < FLT_MIN && fabs(y2) < FLT_MIN) {
+      // Flush future values to zero (until there is new input).
+      y1 = y2 = 0.0;
+      // Flush calculated values.
+      for (int i = framesToProcess; i-- && fabs(destP[i]) < FLT_MIN; ) {
+        destP[i] = 0.0f;
+      }
+    }
+    // Local variables back to member.
+    m_x1 = x1;
+    m_x2 = x2;
+    m_y1 = y1;
+    m_y2 = y2;
 }
 
 void Biquad::reset()
